# dayone-to-obsidian

./: config.yaml  flake.nix  pyproject.toml  splitfile.py
